tests/typing/bad/testfile-arith-2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { bool *p; 1-p; }
